--- a/weathervis/templates/weathervis/weathervis.html
+++ b/weathervis/templates/weathervis/weathervis.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <div id='tool-div' class='panel-border tool-panel'>
-	
 </div>
 <div id='map-div' class='map-panel'></div>
 <div id='stream-div' class='panel-border stream-panel'></div>
@@ -39,16 +38,24 @@
         	selectedObj = null;
         };
         
+        function mouseWheelHandler(e) {
+        	var currentObj = retrieveParentDiv(e.target);
+        	if (currentObj == null) return;
+        	GeoVis.Utility.eventMapper.raiseEvent(currentObj.id, 'mousewheel', e);
+        }
+        
         return {
             enable:function(){
                 document.addEventListener('mousedown', mouseDownHandler);
                 document.addEventListener('mousemove', mouseMoveHandler);
                 document.addEventListener('mouseup', mouseUpHandler);
+                document.addEventListener('mousewheel', mouseWheelHandler);
             },
             disable:function(){
                 document.removeEventListener('mousedown', mouseDownHandler);
                 document.removeEventListener('mousemove', mouseMoveHandler);
                 document.removeEventListener('mouseup', mouseUpHandler);
+                document.removeEventListener('mousewheel', mouseWheelHandler);
             }
         }
         
