--- a/templates/main/layout.html
+++ b/templates/main/layout.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Data Visualization</title>
-    <link rel="stylesheet" type="text/css" href='/static/bootstrap.css' />
-    <link rel="stylesheet" type="text/css" href='/static/main/funcpanel.css' />
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/static/jquery-ui.css" />
 </head>
 
 <body>
@@ -16,22 +16,19 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href='/weathervis/home'>Home</a></li>
+                    <li><a href="/weathervis/home">Home</a></li>
                 </ul>
             </div>
         </div>
     </div>
     
-    <div class="container" style='position:relative; top:50px;'>
+    <div class="container-fluid" style="position:relative; top:50px;">
 		{% block content %}{% endblock %}
-        <hr/>
-        <footer>
-            <p>&copy; Hongsen</p>
-        </footer>
     </div>
     
     <script type="text/javascript" src="/static/jquery-2.0.3.js"></script>
-	<script type="text/javascript" src='/static/bootstrap.min.js'></script>
+    <script type="text/javascript" src="/static/jquery-ui.js"></script>
+	<script type="text/javascript" src="/static/bootstrap.min.js"></script>
 	{% block scripts %}{% endblock %}
 </body>
 </html>
